Refatoração e feature cartão
